--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ main{
     box-shadow: inset 0 7px 9px -7px rgb(0 0 0 / 14%);
     width: 100%;
     justify-content: center;
-    padding-top: 40px;
+    padding: 30px 0;
 }
 .main--favorite-display-img img{
     width: 375px;
@@ -224,4 +224,63 @@ main{
     font-size: 1rem;
     line-height: 1.6rem;
 }
+.main--endless-section{
+    margin-top: 128px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main--endless-tittle-container{
+    width: 50%;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.main--endless-tittle-container h2{
+    font-size: 1.6rem;
+    padding-bottom: 10px;
+}
+.main--endless-tittle-container p{
+    font-size: 1rem;
+    line-height: 1.6rem;
+}
+.main--endless-articles-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10vw;
+}
+.main--endless-articles-container article{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 
+}
+.main--endless-articles-container button{
+    border: none;
+    background: none;
+    width: 110px;
+    height: 100px;
+    cursor: pointer;
+}
+.main--endless-articles-container button img{
+    object-fit: contain;
+    width: 100%;
+    object-position: center;
+}
+.main--endless-articles-container h5{
+    font-size: 1.4rem;
+}
+.main--endless-articles-container p{
+    font-size: 1rem;
+    line-height: 1.6rem;
+    text-align: center;
+}
+.main--endless-articles-container a{
+    font-size: 1rem;
+    color: #008248;
+    text-decoration: underline;
+}
+.main--endless-articles-container a:hover{
+    text-decoration: none;
+}
