--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ main{
     line-height: 1.6rem;
 }
 .main--endless-section{
-    margin-top: 128px;
+    margin: 128px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -282,5 +282,163 @@ main{
     text-decoration: underline;
 }
 .main--endless-articles-container a:hover{
+    text-decoration: none;
+}
+.main--payment_method-section{
+    background-color: #f3f1e7;
+    padding: 48px 5%;
+    padding-bottom: 0;
+    margin-bottom: 128px;
+}
+.main--payment_method-container{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.main--payment_method-tittle-container{
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 64px;
+}
+.main--payment_method-tittle-container h2{
+    font-size: 1.6rem;
+}
+.main--payment_method-tittle-container p{
+    padding: 10px;
+    font-size: 1rem;
+}
+.main--payment_method-articles-container{
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    gap: 100px;
+}
+.main--payment_method-articles-container article{
+    display: grid;
+    grid-template-columns: minmax(50px, 200px) repeat(2, minmax(200px, 400px)) ;
+    justify-content: space-around;
+    padding: 30px 0;
+    border-bottom: solid 1px #ccc;
+}
+.main--payment_method-articles-tittle h4{
+    font-size: 1.4rem;
+}
+.main--payment_method-articles-tittle p{
+    font-size: 1rem;
+    padding: 10px 0;
+}
+.main--payment_method-articles-options{
+    display: flex;
+    gap: 10px;
+    gap: 20px;
+}
+.main--payment_method-articles-options img{
+    width: 110px;
+}
+
+.main--payment_method-articles-options h5{
+    font-size: 1.2rem;
+}
+.main--payment_method-articles-options p{
+    font-size: 1rem;
+    line-height: 1.6rem;
+}
+.main--star_code-section{
+    margin-bottom: 128px;
+}
+.main--star_code-container{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 50%;
+    margin-left: 16.66667%;
+}
+.main--star_code-container h2{
+    font-size: 1.6rem;
+}
+.main--star_code-container p{
+    font-size: 1rem;
+}
+.main--star_code-container button{
+    align-self: flex-end;
+    padding: 10px 25px;
+    border-radius: 50px;
+    background: none;
+    border: solid 1px #000;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+.main--star_code-container button:hover{
+    background-color: #eee;
+}
+.main--star_code-input-container{
+    display: grid;
+    border: solid 2px #008248;
+    border-radius: 12px;
+    height: 50px;
+    align-content: center;
+    padding: 0 10px;
+}
+.main--star_code-input-container input{
+    border: none;
+    outline: none;
+    font-size: 1rem;
+}
+.main--questions-section{
+    margin-bottom: 128px;
+}
+.main--questions-tittle{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    gap: 30px;
+    margin-left: 16.66667%;
+}
+.main--questions-tittle h2{
+    font-size: 1.6rem;
+}
+.main--questions-tittle p{
+    font-size: 1rem;
+    line-height: 1.6rem;
+}
+.main--questions-tittle a{
+    color: #008248;
+    text-decoration: underline;
+}
+.main--questions-tittle a:hover{
+    text-decoration: none;
+}
+.main--info-section{
+    background-color: #f3f1e7;
+    margin-bottom: 48px;
+    padding: 30px 5%;
+}
+.main--info-container{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.main--info-container p{
+    font-size: 1rem;
+    font-weight: 1.4rem;
+    padding: 10px 0;
+}
+.main--info-container h3{
+    font-size: 1rem;
+    padding: 10px 0;
+}
+.main--info-grid-container{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 600px));
+    gap: 30px;
+    justify-content: center;   
+}
+.main--info-grid-container .first-p{
+    grid-column: 1/3;
+}
+.main--info-grid-container a{
+    color: #008248;
+    text-decoration: underline;
+}
+.main--info-grid-container a:hover{
     text-decoration: none;
 }
