--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 a{
     text-decoration: none;
 }
-li{
+header li{
     padding: 50px 0;
     list-style: none;
 }
@@ -441,4 +441,64 @@ main{
 }
 .main--info-grid-container a:hover{
     text-decoration: none;
+}
+.footer--link-section{
+    display: grid;
+    padding: 40px 3%;
+    width: 100%;
+    grid-auto-columns: minmax(100px, 200px);
+    grid-auto-flow: column;
+    gap: 3%;
+    margin: 0 auto;
+    border-bottom: solid 1px #ccc;
+}
+.footer--link-section div{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    font-size: 1rem;
+    color: #555;
+}
+.footer--link-section a{
+    color: #555;
+}
+.footer--references-section{
+    display: flex;
+    flex-direction: column;
+    padding: 40px 3%;
+    gap: 30px;
+}
+.footer--references-icons-container{
+    display: flex;
+    gap: 20px;
+    font-size: 2rem;
+}
+.footer--references-icons-container i{
+    cursor: pointer;
+}
+.footer--references-terms_list-container ul{
+    display: flex;
+    gap: 20px;
+    font-size: 1rem;
+}
+.footer--references-terms_list-container li{
+    list-style: none;
+}
+.footer--references-terms_list-container a{
+    color: #555;
+}
+.footer--references-terms_list-container a:hover{
+    text-decoration: underline;
+}
+.footer--references-terms_list-container span{
+    font-size: 1.6rem;
+    color: #aaa;
+    margin-right: 20px;
+}
+.footer--references-terms_list-container .first-span{
+    margin: 0;
+}
+.footer--references-copyright{
+    font-size: 0.9rem;
+    color: #aaa;
 }
