--- a/responsive/display-X850px.css
+++ b/responsive/display-X850px.css
@@ -9,8 +9,10 @@
         font-size: 2rem;
         cursor: pointer;
     }
-    .nav--responsive-menu_hidden{
-        display: none;
+    .nav--responsive-menu_hidden {
+        display: flex;
+        position: fixed;
+        left: -100%;
         flex-direction: column;
         flex-wrap: wrap;
         align-items: flex-start;
@@ -19,6 +21,10 @@
         gap: 70px;
         padding: 40px 3%;
         font-size: 1rem;
+        transition: 0.3s;
+    }
+    .nav--responsive-menu_hidden.active{
+        left: 0;
     }
     .nav--responsive-menu_hidden a{
         color: #555;
@@ -79,6 +85,7 @@
         height: 50px;
         font-size: 1rem;
         font-weight: bold;
+        cursor: pointer;
     }
     .footer--link-section__responsive .hidden-info--button{
         display: none;
@@ -86,6 +93,10 @@
         gap: 30px;
         margin-bottom: 30px;
         font-size: 1rem;
+        transition: 0.3s;
+    }
+    .footer--link-section__responsive .hidden-info--button.active{
+        display: flex;
     }
     .footer--link-section__responsive .hidden-info--button a{
         color: #555;
