--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
     font-weight: bold;
     padding: 42px 0;
 }
-.nav--left-side a:hover{
+.nav--left-side a:focus{
     color: #008248;
     box-shadow: inset 0 -6px #008248;
 }
@@ -92,6 +92,9 @@ header{
     display: none;
     justify-content: space-between;
     background-color: #fff;
+}
+.nav--responsive-menu_hidden {
+    display: none;
 }
 main{
     margin-top: 150px;
@@ -196,7 +199,7 @@ main{
     font-weight: bold;
     cursor: pointer;
 }
-.main--favorite-options-button button:active{
+.main--favorite-options-button button:focus{
     box-shadow: inset 0 -6px #008248;
 }
 .main--favorite-display-container{
