header bottons scale

--- a/style.css
+++ b/style.css
@@ -35,14 +35,25 @@ header{
     color: #000;
     font-weight: bold;
     padding: 42px 0;
+    transition: 0.2s;
 }
 .nav--left-side a:focus{
     color: #008248;
     box-shadow: inset 0 -6px #008248;
 }
+.nav--left-side a:hover{
+    color: #008248;
+    box-shadow: inset 0 -6px #008248;
+    font-size: 1.2rem;
+}
+
 .nav--logo img{
     width: 100px;
     cursor: pointer;
+    transition: 0.2s;
+}
+.nav--logo img:hover{
+    width: 110px;
 }
 .nav--right-side{
     display: flex;
@@ -55,9 +66,11 @@ header{
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
+    transition: 0.1s;
 }
 .nav--button-location:hover{
     color: #008248;
+    font-size: 1.1rem;
 }
 .nav--button{
     background-color: #fff;
@@ -68,9 +81,12 @@ header{
     font-weight: bold;
     cursor: pointer;
     border: solid 1px #000;
+    transition: 0.2s;
 }
 .nav--button:hover{
     background-color: #f3f1e7;
+    padding: 0 15px;
+    height: 35px;
 }
 .button-black{
     color: #fff;
@@ -126,6 +142,7 @@ main{
     border: none;
     color: #fff;
     margin: 30px 0;
+    cursor: pointer;
 }
 .main--banner-info a{
     color:#000;
