--- a/style.css
+++ b/style.css
@@ -219,6 +219,9 @@ main{
 .main--favorite-options-button button:focus{
     box-shadow: inset 0 -6px #008248;
 }
+.button25{
+    box-shadow: inset 0 -6px #008248;
+}
 .main--favorite-display-container{
     width: 100%;
 }
