--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header{
 .nav--left-side a:hover{
     color: #008248;
     box-shadow: inset 0 -6px #008248;
-    font-size: 1.2rem;
+    
 }
 
 .nav--logo img{
@@ -53,7 +53,7 @@ header{
     transition: 0.2s;
 }
 .nav--logo img:hover{
-    width: 110px;
+    
 }
 .nav--right-side{
     display: flex;
@@ -70,7 +70,7 @@ header{
 }
 .nav--button-location:hover{
     color: #008248;
-    font-size: 1.1rem;
+    
 }
 .nav--button{
     background-color: #fff;
@@ -85,8 +85,7 @@ header{
 }
 .nav--button:hover{
     background-color: #f3f1e7;
-    padding: 0 15px;
-    height: 35px;
+    
 }
 .button-black{
     color: #fff;
@@ -144,6 +143,10 @@ main{
     margin: 30px 0;
     cursor: pointer;
 }
+.main--banner-info button:hover{
+    background-color: #1e3932;
+}
+
 .main--banner-info a{
     color:#000;
     text-decoration: underline;
@@ -218,7 +221,13 @@ main{
 }
 .main--favorite-options-button button:focus{
     box-shadow: inset 0 -6px #008248;
+    color: #008248;
+
 }
+.main--favorite-options-button button:hover{
+    color: #008248;
+}
+
 .button25{
     box-shadow: inset 0 -6px #008248;
 }
